<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <include
        android:id="@+id/layoutToolbar"
        layout="@layout/layout_main_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_16">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTextInputStyle"
            app:hintEnabled="false"
            app:boxStrokeWidth="@dimen/spacing_0"
            app:boxStrokeColor="?colorOnPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_title"
                android:singleLine="true"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTextInputStyle"
            app:hintEnabled="false"
            app:boxStrokeColor="?colorOnPrimary"
            app:boxStrokeWidth="@dimen/spacing_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_post_body"
                android:lines="8"
                android:gravity="top"
                android:textSize="@dimen/font_18" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PrimaryBtnStyle"
            android:text="@string/add_post"
            android:layout_marginTop="@dimen/spacing_20"
            app:layout_constraintTop_toBottomOf="@id/ilBody"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>